# Tracker_v1

install/: local_setup.sh  setup.sh
install/camera_input/lib/camera_input/: ball_detector  camera_node
install/camera_input/share/camera_input/: package.sh  package.xml
install/object_tracking/lib/object_tracking/: look_at_point
install/object_tracking/share/object_tracking/: package.sh  package.xml
install/servo_control/lib/servo_control/: servo_controller  servo_controller_node
install/servo_control/share/servo_control/: package.sh  package.xml
install/servo_controller/lib/servo_control/: angle_command_node  position_monitor_node
install/servo_controller/share/servo_control/: package.xml
install/servo_controller/share/servo_controller/: package.sh
log/: latest_build
src/camera_input/: setup.py
src/camera_input/camera_input/: camera.py
src/object_tracking/: setup.py
src/servo_control/: setup.py
src/servo_control/servo_control/: servo_controller.py
